--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "memory-cache": "0.0.5",
     "lodash": "~1.3.1",
     "inflection": "~1.2.6",
-    "redis": "~0.10.1"
+    "redis": "~0.10.1",
+    "bunyan": "~1.2.1",
+    "bunyan-prettystream": "~0.1.3"
   }
 }
