--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "inflection": "~1.2.6",
     "redis": "~0.10.1",
     "bunyan": "~1.2.1",
-    "bunyan-prettystream": "~0.1.3"
+    "bunyan-prettystream": "~0.1.3",
+    "async": "~0.9.0"
   }
 }
