--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "lodash": "~1.3.1",
     "inflection": "~1.2.6",
     "redis": "~0.10.1",
-    "bunyan": "~1.2.1",
-    "bunyan-prettystream": "~0.1.3",
+    "bunyan": "1.4.0",
     "async": "~0.9.0"
   }
 }
